add ready, compelete and approve to ordering service
